[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
iyes_progress = "0.9.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.11.3"

default-features = false
# https://bevy-cheatbook.github.io/setup/bevy-config.html
features = [
	# "animation",
	"bevy_asset",
	"bevy_audio",
	"bevy_gilrs",
	# "bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	# "bevy_pbr",
	# "bevy_gltf",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	# "multi-threaded",
	"png",
	# "hdr",
	# "ktx2",
	# "zstd",
	"vorbis",
	# "x11",
	# "filesystem_watcher",
	"bevy_gizmos",
	# "android_shared_stdcxx",
	# "tonemapping_luts",
	"default_font",
	"webgl2",
]

[dependencies.bevy_asset_loader]
version = "0.17.0"
features = ["2d", "progress_tracking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
