[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
iyes_progress = "0.9.1"
leafwing-input-manager = "0.10.0"

[dependencies.web-sys]
version = "0.3.64"
features = ["Location", "Window"]

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dependencies.bevy]
version = "0.11.3"

default-features = false
# https://bevy-cheatbook.github.io/setup/bevy-config.html
features = [
	# "animation",
	"bevy_asset",
	"bevy_audio",
	"bevy_gilrs",
	# "bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	# "bevy_pbr",
	# "bevy_gltf",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	# "multi-threaded",
	"png",
    "mp3",
	# "hdr",
	# "ktx2",
	# "zstd",
	"vorbis",
	# "x11",
	# "filesystem_watcher",
	"bevy_gizmos",
	# "android_shared_stdcxx",
	# "tonemapping_luts",
	"default_font",
	"webgl2",
]

[dependencies.bevy_asset_loader]
version = "0.17.0"
features = ["2d", "progress_tracking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies.bevy_xpbd_2d]
# version = "0.2"
git = "https://github.com/Jondolf/bevy_xpbd"
features = ["debug-plugin"]
